<resources>
    <string name="app_name">Vampire</string>
    <string name="merit">Merit</string>
    <string name="flaw">Flaw</string>
    <string name="cost">Cost</string>
    <string name="blood_per_turn">Blood Per Turn</string>
    <string name="conscience">Conscience</string>
    <string name="conviction">Conviction</string>
    <string name="self_control">Self-Control</string>
    <string name="instinct">Instinct</string>
    <string name="courage">Courage</string>
    <string name="merits_flaws">Merits &amp; Flaws</string>
    <string-array name="humanity">
        <item>Humanity</item>
        <item>Path of Blood</item>
        <item>Path of the Bones</item>
        <item>Path of Caine</item>
        <item>Path of Cathari</item>
        <item>Path of the Feral Heart</item>
        <item>Path of Honorable Accord</item>
        <item>Path of Lilith</item>
        <item>Path of Metamorphosis</item>
        <item>Path of Night</item>
        <item>Path of Paradox</item>
        <item>Path of Power and the Inner Voice</item>
        <item>Path of Typhon</item>
    </string-array>
    <string name="path">Path</string>
    <string name="willpower">Willpower</string>
    <string name="blood_pool">Blood Pool</string>
    <string name="health">Health</string>
    <string name="weakness">Weakness</string>
    <string name="experience">Experience</string>
    <string name="feral_whispers">This power is the basis from which all other Animalism abilities grow. The vampire creates an empathic connection with a beast, thereby allowing him to communicate or issue simple commands. The Kindred locks eyes with the animal, transmitting his desires through sheer force of will. Although it isn’t necessary to actually “speak” in chirps, hisses, or barks, some vampires find that doing so helps strengthen the connection with the animal. Eye contact must be maintained the entire time; if it’s broken, the Kindred must re-establish contact to continue communication.\n\n
The simpler the creature, the more difficult it becomes to connect with the animal’s Beast. Mammals, predatory birds, and larger reptiles are relatively easy to communicate with. Insects, invertebrates, and most fish are just too simple to connect with.\n\n
Feral Whispers provides no guarantees that an animal will want to deal with the vampire, nor does it ensure that the animal will pursue any requests the vampire makes of it. Still, it does at least make the creature better disposed toward the Kindred. The manner in which the vampire presents his desires to the animal often depends on the type of creature. A Kindred can often bully smaller beasts into heeding commands, but he’s better off couching orders for large predators as requests. If the vampire successfully uses the power, the animal performs the command to the best of its ability and intellect. Only the very brightest creatures understand truly complex directives (orders dealing with conditional situations or requiring abstract logic). Commands that the animal does understand remain deeply implanted, however, and guide its behavior for some time.\n\n
System: No roll is necessary to talk with an animal, but the character must establish eye contact (see p. 152) first. Issuing commands requires a Manipulation + Animal Ken roll. The difficulty depends on the creature: Predatory mammals (wolves, cats, vampire bats) are difficulty 6, other mammals and predatory birds (rats, owls) are difficulty 7, and other birds and reptiles (pigeons, snakes) are difficulty 8. This difficulty is reduced by one if the character speaks to the animal in its “native tongue,” and can be adjusted further by circumstances and roleplaying skill (we highly recommend that all communication between characters and animals be roleplayed).\n\n
The number of successes the player achieves dictates how strongly the character’s command affects the animal. One success is sufficient to have a cat follow an individual and lead the character to the same location, three successes are enough to have a raven spy on a target for weeks, and five successes ensure that a grizzly ferociously guards the entrance to the character’s wilderness haven for some months.\n\n
The character’s Nature plays a large part in how he approaches these conversations. The character might try intimidating, teasing, cajoling, or rationalizing. The player should understand that he does not simply play his character in these situations, but the Beast Within as well.\n\n
Using this power cannot force an animal to do something against its nature, or to force a creature to risk its life. While the aforementioned grizzly would stand guard to the vampire’s haven and even fight for it, it would not do so against obviously superior numbers or something overwhelmingly supernatural. A predatory bird might be convinced to harry a target, but would definitely not hold ground. A docile dog or skittish cat would have no problem with reporting something it had seen, but it wouldn’t enter combat unless given no other option — though it would likely agree to stand and fight and then flee at the first opportunity, if a harsh Kindred demanded it.</string>
    <string name="beckoning">The vampire’s connection to the Beast grows strong enough that he may call out in the voice of a specific type of animal — howling like a wolf, shrilling like a raven, etc. This call mystically summons creatures of the chosen type. Since each type of animal has a different call, Beckoning works for only a single species at a time. \n\n
All such animals within earshot are summoned, and some percentage of them will heed the Beckoning if it is successful. While the vampire has no further control over the beasts who answer, the animals who do are favorably disposed toward him and are at least willing to listen to the Kindred’s concerns. (The vampire can then use Feral Whispers on individual animals to command them, which may be at a decreased difficulty at Storyteller discretion.)\n\n
System: The player rolls Charisma + Survival (difficulty 6) to determine the response to the character’s call; consult the table below. Only animals that can hear the cry will respond. If the Storyteller decides no animals of that type are within earshot, the summons goes unanswered. The call can be as specific as the player desires. A character could call for all bats in the area, for only the male bats nearby, or for only the albino bat with the notched ear he saw the other night.\n\n
Successes\n
1 success: A single animal responds.\n
2 successes: One-quarter of the animals within earshot respond.\n
3 successes: Half of the animals respond.\n
4 successes: Most of the animals respond.\n
5 successes: All of the animals respond.</string>
    <string name="quell_the_beast">As the supreme predators of the natural world, Kindred are highly attuned to the bestial nature that dwells within every mortal heart. A vampire who develops this power may assert his will over a mortal (animal or human) subject, subduing the Beast within her. This quenches all powerful, strong emotions — hope, fury, love, fear — within the target. The Kindred must either touch his subject or stare into her eyes to channel his will effectively.\n\n
Mortals who lack the fire of their inner Beasts are quite tractable, reacting to even stressful situations with indifference. Even the most courageous or maddened mortal becomes apathetic and listless, while an especially sensitive individual may suffer from a phobic derangement while under the power’s influence.\n\n
Different Clans evoke this power in different ways, though the effect itself is identical. Tzimisce call it Cowing the Beast, since they force the mortal’s weaker spirit to shrivel in fear before the Kindred’s own inner Beast. Nosferatu refer to it as Song of Serenity, since they soothe the subject’s Beast into a state of utter complacency, thus allowing them to feed freely. Gangrel know the power as Quell the Beast, and force the mortal spirit into a state of fear or apathy as befits the individual vampire’s nature.\n\n
System: The player rolls Manipulation + Intimidation if forcing down the Beast through fear, or Manipulation + Empathy if soothing it into complacency. The difficulty of the roll is 7 in either case. This is an extended action requiring as many total successes as the target has Willpower. Failure indicates that the player must start over from the beginning, while a botch indicates that the vampire may not affect that subject’s Beast for the remainder of the scene.\n\n
When a mortal’s Beast is cowed or soothed, she can no longer use or regain Willpower. She ceases all struggles, whether mental or physical. She doesn’t even defend herself if assaulted, though the Storyteller may allow a Willpower roll if the mortal believes her life is truly threatened. To recover from this power, the mortal’s player rolls Willpower (difficulty 6) once per day until she accumulates enough successes to equal the vampire’s Willpower. Kindred cannot be affected by this power.\n\n
Though a vampire’s Beast cannot be cowed with this ability, the Storyteller may allow characters to use the “soothing” variation of this power to pull a vampire out of frenzy. With three or more successes, the frenzying vampire may roll again to pull herself out of frenzy, using the same difficulty as the stimulus that caused the frenzy originally.</string>
</resources>